# ads-library-scraper

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml  run-weekly-scrape.sh
src/ads_library_scraper/: __main__.py  batch.py  cli.py  download.py  report.py  scrape.py  url.py
