[project]
name = "ads-library-scraper"
version = "0.1.0"
description = "Fast scraper for Facebook Ads Library — videos + metadata + report from any advertiser page."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Cristiano Sanna", email = "c.sanna22510@gmail.com" },
    { name = "Lucas Faria (original)", email = "lfariafon@gmail.com" },
]
keywords = ["facebook", "ads-library", "scraper", "competitor-intelligence", "playwright"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.45",
    "httpx>=0.27",
]

[project.scripts]
ads-library-scraper = "ads_library_scraper.cli:main"
ads-library-batch = "ads_library_scraper.batch:main"

[project.urls]
Homepage = "https://github.com/CrisDev01-PB/ads-library-scraper"
Issues = "https://github.com/CrisDev01-PB/ads-library-scraper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ads_library_scraper"]
